--- a/Ethereal World/css/stayl.css
+++ b/Ethereal World/css/stayl.css
@@ -461,6 +461,7 @@
     left: 40px;
     border-bottom: 2px solid red;
     padding: 5px 50px 5px 10px;
+    outline: none;
 }
 
 .contact .cont .input2{
@@ -470,6 +471,7 @@
     left: 290px;
     border-bottom: 2px solid red;
     padding: 5px 50px 5px 10px;
+    outline: none;
 }
 
 .contact .cont textarea{
@@ -480,6 +482,7 @@
     top: 80px;
     left: 50px;
     border-bottom: 2px solid red;
+    outline: none;
 }
 
 .contact .cont .input3{
