--- a/Ethereal World/css/stayl.css
+++ b/Ethereal World/css/stayl.css
@@ -16,7 +16,7 @@
 .header{
     /* border: 2px solid red; */
     width: 100%;
-    height: 60px;
+    height: 10vh;
     position: relative;
     background-color: rgb(66, 46, 66);
     position: fixed;
@@ -48,9 +48,9 @@
 .header .menyu{
     /* border: 2px solid blue; */
     width: 580px;
-    height: 60px;
+    height: 42px;
+    padding: 18px 0 0 0;
     position: absolute;
-    top: 18px;
     right: 0;
 }
 
