--- a/Ethereal World/css/stayl.css
+++ b/Ethereal World/css/stayl.css
@@ -3,7 +3,11 @@
     margin: 0;
 }
 
-    body{
+a{
+    text-decoration: none;
+}
+
+body{
         width: 100%;
         height: 3000px;
     }
@@ -532,7 +536,53 @@
 /*                   F O O T E R              */
 
 .footer{
-    border: 2px solid red;
+    /* border: 2px solid red; */
     width: 100%;
     height: 100px;
+    position: relative;
+}
+
+.footer .p1{
+    position: absolute;
+    top: 40px;
+    left: 250px;
+}
+
+.footer .p2{
+    position: absolute;
+    top: 40px;
+    right: 250px;
+}
+
+.footer .p2 a{
+    color: rgb(212, 59, 32);
+}
+
+.footer i{
+    font-size: 2.1rem;
+    position: absolute;
+    left: 10px;
+    color: black;
+}
+
+.footer i:hover{
+    color: rgb(212, 59, 32);
+}
+
+.footer .fac{
+    position: absolute;
+    top: 30px;
+    left: 600px;
+}
+
+.footer .tw{
+    position: absolute;
+    top: 30px;
+    left: 650px;
+}
+
+.footer .in{
+    position: absolute;
+    top: 30px;
+    left: 700px;
 }
