--- a/Ethereal World/css/stayl.css
+++ b/Ethereal World/css/stayl.css
@@ -531,6 +531,10 @@ body{
     font-size: 0.9rem;
 }
 
+.contact .emnumber .number i{
+    color: red;
+}
+
 
 
 /*                   F O O T E R              */
